# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-01-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the refresh option to cloudi_service_filesystem to refresh
      the cached filesystem data at a specific interval in seconds
    * Add cloudi_service:key_value_store/3
    * Add cloudi_service:key_value_erase/3

2014-01-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:key_value_find/2 to provide an generic interface
      for accessing the RequestInfo key/value pairs
    * Add cloudi_service:key_values type
    * Update the examples to provide more details and fix a few
      release problems
    * Update dynamic_compile

2014-01-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_quorum timeout bug
    * Make cloudi_service_quorum handle Byzantine service request failures
      (by default)

2013-12-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update jsx (no more dialyzer errors, yay!)

2013-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix floating point usage of count_process and count_thread > 1.0 so that
      floor is used (not ceil!)

2013-12-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlang_cassandra
    * Fix the termination of service processes when count_process_dynamic
      ramps-down a service instance
    * Add cloudi:trans_id_age/1

2013-12-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the count_process_dynamic service configuration option for
      dynamically adjusting the number of processes used for a single
      service instance (i.e., single service_id) based on changes in the
      rate of incoming service requests
    * Add the rate-based hibernate service configuration option for internal
      services (a list of options for conditional hibernation)

2013-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>
